--- a/.env
+++ b/.env
@@ -3,7 +3,9 @@ MYSQL_DATABASE=rust_axum_sqlx
 MYSQL_USER=user
 MYSQL_PASSWORD=password123
 MYSQL_ROOT_PASSWORD=password123
+MYSQL_HOST=mysql
+MAX_DB_CONNECTIONS=32
 
 # Rust support placeholder
 # For sqlx cli and rust sqlx
-DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@127.0.0.1:13306/${MYSQL_DATABASE}
+DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@${MYSQL_HOST}/${MYSQL_DATABASE}
