--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,15 @@ edition = "2021"
 axum = "0.7.9"
 chrono = { version = "0.4.38", features = ["serde"] }
 dotenv = "0.15.0"
+openssl = { version = "0.10.68", features = ["vendored"] }
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
-sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
+sqlx = { version = "0.8.2", features = [
+    "runtime-async-std-native-tls",
+    "mysql",
+    "chrono",
+    "uuid",
+] }
 tokio = { version = "1.42.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["cors"] }
 uuid = { version = "1.11.0", features = ["serde", "v4"] }
