--- a/.env-docker
+++ b/.env-docker
@@ -3,7 +3,7 @@ MYSQL_DATABASE=rust_axum_sqlx
 MYSQL_USER=user
 MYSQL_PASSWORD=password123
 MYSQL_ROOT_PASSWORD=password123
-MYSQL_HOST=localhost:13306
+MYSQL_HOST=mysql
 MAX_DB_CONNECTIONS=32
 
 # Rust support placeholder
