--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 axum = "0.7.9"
 chrono = { version = "0.4.38", features = ["serde"] }
 dotenv = "0.15.0"
+metrics = "0.24.1"
+metrics-exporter-prometheus = "0.16.0"
 openssl = { version = "0.10.68", features = ["vendored"] }
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
@@ -17,5 +19,7 @@ sqlx = { version = "0.8.2", features = [
     "uuid",
 ] }
 tokio = { version = "1.42.0", features = ["full"] }
-tower-http = { version = "0.6.2", features = ["cors"] }
+tower-http = { version = "0.6.2", features = ["cors", "trace"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 uuid = { version = "1.11.0", features = ["serde", "v4"] }
