--- a/Dockerfile-release
+++ b/Dockerfile-release
@@ -7,14 +7,11 @@ COPY . .
 RUN cargo build --release
 
 # our final base
-# FROM debian:buster-slim
-# FROM debian:bullseye
-# FROM debian:bookworm-slim
 FROM debian:stable-slim
 
 # copy the build artifact from the build stage
 COPY --from=builder /note-app/target/release/note-app ./note-app
-COPY --from=builder /note-app/.env ./.env
+COPY --from=builder /note-app/.env-docker ./.env
 
 USER root
 
