fix docker compose k6 port

--- a/docker-compose-k6.yml
+++ b/docker-compose-k6.yml
@@ -24,16 +24,16 @@ services:
   influxdb:
     image: influxdb:1.8
     ports:
-      - "8086:8186"
+      - "8186:8086"
     environment:
       - INFLUXDB_DB=k6
-    depends_on:
-      - note-app
+    # depends_on:
+    #   - note-app
 
   grafana:
     image: grafana/grafana:latest
     ports:
-      - "3000:3000"
+      - "3001:3000"
     environment:
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
       - GF_AUTH_ANONYMOUS_ENABLED=true
