--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 axum = "0.7.9"
 chrono = { version = "0.4.38", features = ["serde"] }
 dotenv = "0.15.0"
+moka = { version = "0.12.10", features = ["future"] }
 openssl = { version = "0.10.68", features = ["vendored"] }
+redis = { version = "0.27.6", features = ["tokio-comp"] }
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
 sqlx = { version = "0.8.2", features = [
@@ -16,7 +18,7 @@ sqlx = { version = "0.8.2", features = [
     "chrono",
     "uuid",
 ] }
-timedmap = { version = "1.0.2", features = ["tokio"] }
 tokio = { version = "1.42.0", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["cors"] }
+tracing = "0.1.41"
 uuid = { version = "1.11.0", features = ["serde", "v4"] }
