--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ MYSQL_PASSWORD=password123
 MYSQL_ROOT_PASSWORD=password123
 MYSQL_HOST=mysql
 MAX_DB_CONNECTIONS=100
+CACHE_TTL_MILLIS=3
 
 # Rust support placeholder
 # For sqlx cli and rust sqlx
