--- a/docker-compose-k6.yml
+++ b/docker-compose-k6.yml
@@ -10,7 +10,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.3'
+          cpus: '0.5'
     healthcheck:
       test: mysql ${MYSQL_DATABASE} --user=${MYSQL_USER} --password='${MYSQL_PASSWORD}' --silent --execute "SELECT 1;"
       interval: 30s
@@ -44,7 +44,7 @@ services:
 
   k6:
     container_name: k6
-    image: grafana/k6:latest
+    image: grafana/k6:0.56.0
     ports:
       - "6565:6565"
     volumes:
