--- a/k8s/mysql-deployment.yaml
+++ b/k8s/mysql-deployment.yaml
@@ -1,50 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  # annotations:
-  #   kompose.cmd: kompose convert
-  #   kompose.version: 1.34.0 (cbf2835db)
-  # labels:
-  #   io.kompose.service: mysql
   name: mysql
+  labels:
+    app: mysql
+    tier: database
 spec:
   replicas: 1
   selector:
     matchLabels:
-      # io.kompose.service: mysql
       app: mysql
+      tier: database
   strategy:
     type: Recreate
   template:
     metadata:
-      # annotations:
-      #   kompose.cmd: kompose convert
-      #   kompose.version: 1.34.0 (cbf2835db)
-      # labels:
-      #   io.kompose.service: mysql
       labels:
         app: mysql
+        tier: database
     spec:
       containers:
         - args:
             - --init-file
             - /data/application/init.sql
           env:
-            - name: CACHE_TTL_MILLIS
-              valueFrom:
-                configMapKeyRef:
-                  key: CACHE_TTL_MILLIS
-                  name: env
-            - name: DATABASE_URL
-              valueFrom:
-                configMapKeyRef:
-                  key: DATABASE_URL
-                  name: env
-            - name: MAX_DB_CONNECTIONS
-              valueFrom:
-                configMapKeyRef:
-                  key: MAX_DB_CONNECTIONS
-                  name: env
             - name: MYSQL_DATABASE
               valueFrom:
                 configMapKeyRef:
@@ -71,20 +50,10 @@ spec:
                   key: MYSQL_USER
                   name: env
           image: mysql:8
-          livenessProbe:
-            exec:
-              command:
-                - mysql  --user= --password='' --silent --execute "SELECT 1;"
-            failureThreshold: 5
-            periodSeconds: 30
-            timeoutSeconds: 10
           name: mysql
           ports:
             - containerPort: 3306
-              protocol: TCP
-          resources:
-            limits:
-              cpu: 500m
+              # protocol: TCP
           volumeMounts:
             - mountPath: /data/application/init.sql
               name: mysql-cm0
