--- a/k8s/mysql-service.yaml
+++ b/k8s/mysql-service.yaml
@@ -1,14 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  # annotations:
-  #   kompose.cmd: kompose convert
-  #   kompose.version: 1.34.0 (cbf2835db)
-  # labels:
-  #   io.kompose.service: mysql
   name: mysql
   labels:
     app: mysql
+    tier: database
 spec:
   type: NodePort
   ports:
@@ -17,5 +13,5 @@ spec:
       targetPort: 3306
       protocol: TCP
   selector:
-    # io.kompose.service: mysql
     app: mysql
+    tier: database
