--- a/k8s/note-app-service.yaml
+++ b/k8s/note-app-service.yaml
@@ -1,11 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.34.0 (cbf2835db)
   labels:
-    io.kompose.service: note-app
+    run: note-app
   name: note-app
 spec:
   type: LoadBalancer
@@ -15,4 +12,4 @@ spec:
       targetPort: 8080
       protocol: TCP
   selector:
-    io.kompose.service: note-app
+    app: note-app
