--- a/k8s/note-app-deployment.yaml
+++ b/k8s/note-app-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
     app: note-app
   name: note-app
 spec:
-  replicas: 2
+  replicas: 8
   selector:
     matchLabels:
       app: note-app
@@ -57,4 +57,7 @@ spec:
           ports:
             - containerPort: 8080
           resources:
+            limits:
+              cpu: 80m
+              memory: 40Mi
       restartPolicy: Always
