--- a/k8s/ingress/ingress-nginx-controller-cm.yaml
+++ b/k8s/ingress/ingress-nginx-controller-cm.yaml
@@ -10,4 +10,4 @@ data:
   proxy-connect-timeout: "10"
   proxy-read-timeout: "120"
   proxy-send-timeout: "120"
-  disable-access-log: false
+  disable-access-log: "false"
